<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" tools:context=".segitiga">
<androidx.constraintlayout.widget.ConstraintLayout
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/frameLayout3">
    <Button
            android:text="@string/hitungS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hitungS" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tinggiS" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.094"/>
    <Button
            android:text="@string/shareS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shareS"
            app:layout_constraintTop_toBottomOf="@+id/kelilingS" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp" app:layout_constraintHorizontal_bias="0.094"/>
    <TextView
            android:text="@string/luasS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/luasS" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/hitungS" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.082"/>
    <TextView
            android:text="@string/kelilingS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/kelilingS"
            app:layout_constraintTop_toBottomOf="@+id/luasS" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.086"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/tinggiS"
            android:ems="10"
            android:id="@+id/tinggiS" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/alasS" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.159"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/alasS"
            android:ems="10"
            android:id="@+id/alasS" android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.159"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>