<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".persegiPanjang">
<androidx.constraintlayout.widget.ConstraintLayout
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/frameLayout2">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/panjang"
            android:ems="10"
            android:id="@+id/panjangPp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.208"
            android:layout_marginTop="64dp" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/lebar"
            android:ems="10"
            android:id="@+id/lebarPp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/panjangPp" app:layout_constraintHorizontal_bias="0.208"/>
    <Button
            android:text="@string/hitung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hitungPp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/lebarPp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.123"/>
    <TextView
            android:text="@string/luasP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/luasPp" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/hitungPp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.108"/>
    <TextView
            android:text="@string/kelilingP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/kelilingPp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/luasPp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.113"/>
    <Button
            android:text="@string/shareP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sharePp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/kelilingPp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.123" app:layout_constraintVertical_bias="0.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>